service_and_deployment/service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - image: 17090120/service2:latest
          name: service2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service2-service
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: service2
