service_and_deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /service1/(.*)
            pathType: Prefix
            backend:
              service:
                name: service1-service
                port:
                  number: 80
          - path: /service2/(.*)
            pathType: Prefix
            backend:
              service:
                name: service2-service
                port:
                  number: 80
